# ocamlc2

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  driver.py  fe.py  hm.pl  lower.py  main.py  makefile  memorymodel.md  myhm.py  pyproject.toml  types.py
.claude/: settings.json
.cursor/rules/: ast-updates.mdc  caml-parse.mdc  markdown.mdc  tdd.mdc
cmake/: OCamlRTConfig.h.in  OcamlC2Config.h.in
docs/: Closures.md  Functors.md  LTO.md  MatchCodeGen.md  ModuleRefactor.md  Modules.md  PMVs.md  References and Links.md  Series.md  TODO.md  Type Inference.md  ocaml types.md  optional_arguments.md  semicolon.md  tree.md
docs/pres/1/: index.html  script.md
docs/pres/2/: intro_hm.py  let_x_f_y.py  main.py  manim.cfg  script.md
docs/pres/2/media/videos/main/1080p60/partial_movie_files/HindleyMilnerInference/: partial_movie_file_list.txt
docs/pres/2/media/videos/main/480p15/partial_movie_files/HindleyMilnerInference/: partial_movie_file_list.txt
docs/pres/util/: code.py
include/: CMakeLists.txt
include/ocamlc2/CamlParse/: AST.h  Lex.h  Parse.h
include/ocamlc2/Dialect/: CMakeLists.txt  OcamlAttrUtils.h  OcamlDialect.h  OcamlDialect.td  OcamlOpBuilder.h  OcamlPasses.h  OcamlPasses.td  OcamlTypeUtils.h  TypeDetail.h
include/ocamlc2/Parse/: AST.h  ASTPasses.h  Environment.h  MLIRGen.h  MLIRGen2.h  MLIRGen3.h  Runtime.h  ScopedHashTable.h  TSAdaptor.h  TSUnifier.h  TSUtil.h  TypeSystem.h  Unifier.h
include/ocamlc2/Support/: CL.h  Colors.h  Debug.h.inc  LLVMCommon.h  Logging.h  MonadHelpers.h  Repl.h  Utils.h  VisitorHelper.h
lib/: CMakeLists.txt
lib/CamlParse/: AST.cpp  CMakeLists.txt  CamlParse.cpp  IO.cpp
lib/Dialect/: BufferizeBoxes.cpp  CMakeLists.txt  ConvertOCamlToLLVM.cpp  LowerOCamlRuntime.cpp  OcamlAttrUtils.cpp  OcamlDialect.cpp  OcamlLowerToLLVM.cpp  OcamlOpBuilder.cpp  OcamlTypeUtils.cpp  Setup.cpp  TypeInference.cpp
lib/Parse/: AST.cpp  ASTPasses.cpp  CMakeLists.txt  MLIRGen.cpp  MLIRGen2.cpp  MLIRGen3.cpp  Runtime.cpp  TSAdaptor.cpp  TSTypeSystem.cpp  TSUtil.cpp  TypeSystem.cpp
lib/Parse/Unifier/: Environment.cpp  Inference.cpp  PathUtilities.h  SourceUtilities.cpp  SourceUtils.cpp  TypeSystem.cpp  TypeUtilities.cpp  Unifier.cpp  UnifierDebug.h
lib/Support/: CL.cpp  CMakeLists.txt  Debug.cpp  OcamlInterfaceLanguage.cpp  OcamlLanguage.cpp  Repl.cpp  Support.cpp  Utils.cpp
runtime/: CMakeLists.txt  OCamlRTDebug.h  ocamlrt.cpp  ocamlrt.h
scripts/: brun  generate-test-checks.py  genmlirchecks  genmlirchecks-all  run-coverage.sh  spack.yaml  strip-ocaml-comments
stdlib/: CMakeLists.txt  array.mli  bool.mli  list.mli  map.mli  seq.mli  stdlib.mli  string.mli
test/: .lit_test_times.txt  CMakeLists.txt  array.ml  bool.ml  bool.ml.ref  fact.ml  find_index.ml  int.ml.ref  list.ml.ref  lit.cfg.py  modules.ml  option.ml.ref  simple_test.ml  t1.ml  t1.ml.ast  t10.ml  t11.ml  t12.ml  t2.0.mlir  t2.1.mlir  t2.ll  t2.ml  t3.ml  t4.ml  t5.ml  t6.ml  t7.ml  t8.ml  t9.ml  test.ml  typevars.ml
test/cg/: external.ml  external.ml.ref  external.s  freevariable.ml  freevariable.ml.ref  freevariable2.ml  freevariable2.ml.ref  freevariable3.ml  freevariable3.ml.ref  globals.ml  globals.ml.ref  modules.ml  modules.ml.ref  named_arguments.ml  partial_application.ml  partial_application.ml.ref  rec.ml  rec.ml.ref  records.ml  records.ml.ref  records2.ml  records2.ml.ref  records3.ml  records3.ml.ref  t10.ml  t10.ml.ref  t11.ml  t11.ml.ref  t2.ml  t2.ml.ref  t3.ml  t3.ml.ref  t4.ml  t4.ml.ref  t6.ml  t6.ml.ref  t7.ml  t7.ml.ref
test/cpp-tree-sitter/: CMakeLists.txt  traversal.cpp
test/cross-module/: default.profraw  moda.ml  moda.ml.ref  modb.ml  modb.ml.ref
test/interface/: array.mli  array.mli.ref  default.profraw  named1.mli  named1.mli.ref  option.mli  option.mli.ref  t1.mli  t1.mli.ref
test/typecheck/: .tmp.mli  array.mli.ref  fact.ml  fact.ml.ref  find_index.ml.ref  functor1.ml  functor1.ml.ref  functor2.ml  functor2.ml.ref  functor3.ml  functor3.ml.ref  functor4.ml  functor4.ml.ref  functor5.ml.ref  functor6.ml  functor6.ml.ref  functor7.ml  functor7.ml.ref  functor8.ml  let1.ml  let1.ml.ref  match_func.ml  match_func.ml.ref  moda.ml  moda.ml.ref  moda.mli  modb.ml  module_first_class_module_types.ml  module_first_class_module_types.ml.ref  module_type.ml  modules.ml  modules.ml.ref  mon.ml.ref  named1.ml  named1.ml.ref  named1.mli  named1.mli.ref  named_arguments.ml  named_arguments.ml.ref  namespaces.ml  (+32 more)
test/unifier/: default.profraw  fact.ml  fact.ml.ref  find_index.ml  find_index.ml.ref  functor1.ml  functor1.ml.ref  functor2.ml  functor2.ml.ref  functor3.ml  functor3.ml.ref  functor4.ml.ref  functor5.ml  functor5.ml.ref  functor6.ml  functor6.ml.ref  moda.mli  moda.mli.ref  modules.ml  modules.ml.ref  mon.ml  mon.ml.ref  named1.ml  named1.ml.ref  named_arguments.ml  named_arguments.ml.ref  namespaces.ml  namespaces.ml.ref  partial_application.ml  partial_application.ml.ref  records.ml  records.ml.ref  records2.ml  records2.ml.ref  records3.ml  records3.ml.ref  simple_test.ml  simple_test.ml.ref  t1.ml  t1.ml.ref  (+26 more)
test/unit/: CMakeLists.txt  types.cpp
tests/pytest/: test_fe.py
tools/: CMakeLists.txt  c  g3.cpp  genchecks  genchecks-all  genchecks.py  ocaml-lsp-server.cpp  ocaml-opt.cpp  ocamlc2-camlparse.cpp  ocamlc2-link.cpp  ocamlc2-parse.cpp  ocamlc2-parse2.cpp  ocamlc2-tomlir.cpp  ocamlc2-tomlir2.cpp  p3.cpp
tpl/: CMakeLists.txt
