set(BDWGC_EXTRA_C_FLAGS "" CACHE STRING "Extra C flags for bdwgc")
set(BDWGC_BUILD_TYPE "Release" CACHE STRING "Build type for bdwgc")
ExternalProject_Add(bdwgc
  GIT_REPOSITORY https://github.com/ivmai/bdwgc.git
  GIT_TAG master
  PREFIX ${CMAKE_CURRENT_BINARY_DIR}/bdwgc
  CMAKE_ARGS
  -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}
  -DCMAKE_BUILD_TYPE=${BDWGC_BUILD_TYPE}
  -DBUILD_SHARED_LIBS=ON
  -DCMAKE_C_FLAGS=${BDWGC_EXTRA_C_FLAGS}
  -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
  -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
)
install(FILES ${CMAKE_BINARY_DIR}/lib/libgc.* DESTINATION lib)
install(FILES ${CMAKE_BINARY_DIR}/lib/libcord.* DESTINATION lib)
