set(BDWGC_EXTRA_C_FLAGS "" CACHE STRING "Extra C flags for bdwgc")
set(BDWGC_BUILD_TYPE "Release" CACHE STRING "Build type for bdwgc")
set(TPL_C_FLAGS "" CACHE STRING "Extra C flags for all tpls")
set(TPL_CXX_FLAGS "" CACHE STRING "Extra C++ flags for all tpls")
ExternalProject_Add(bdwgc
  GIT_REPOSITORY https://github.com/ivmai/bdwgc.git
  GIT_TAG master
  PREFIX ${CMAKE_CURRENT_BINARY_DIR}/bdwgc
  UPDATE_COMMAND ""
  CMAKE_ARGS
  -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}
  -DCMAKE_BUILD_TYPE=${BDWGC_BUILD_TYPE}
  -DBUILD_SHARED_LIBS=ON
  "-DCMAKE_C_FLAGS=${TPL_C_FLAGS}"
  "-DCMAKE_CXX_FLAGS=${TPL_CXX_FLAGS}"
  -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
  -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
  -DCMAKE_EXE_LINKER_FLAGS=${CMAKE_EXE_LINKER_FLAGS}
)
ExternalProject_Add(replxx
  GIT_REPOSITORY https://github.com/AmokHuginnsson/replxx.git
  GIT_TAG master
  PREFIX ${CMAKE_CURRENT_BINARY_DIR}/replxx
  UPDATE_COMMAND ""
  CMAKE_ARGS
  -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}
  -DCMAKE_BUILD_TYPE=Release
  -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
  -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
  "-DCMAKE_C_FLAGS=${TPL_C_FLAGS}"
  "-DCMAKE_CXX_FLAGS=${TPL_CXX_FLAGS}"
  -DCMAKE_EXE_LINKER_FLAGS=${CMAKE_EXE_LINKER_FLAGS}
)
install(FILES ${CMAKE_BINARY_DIR}/lib/libgc.* DESTINATION lib)
install(FILES ${CMAKE_BINARY_DIR}/lib/libcord.* DESTINATION lib)
